GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/Promotional_eVoucher_rule__c.object-meta.xml
<CustomObject>
    <label>Promotional eVoucher rule</label>
    <nameField>
        <label>Promotional eVoucher rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Promotional eVoucher rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>