GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Batch_Voucher_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Voucher_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Batch Voucher Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>