GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Evoucher_Value__c.field-meta.xml
<CustomField>
    <fullName>Evoucher_Value__c</fullName>
    <label>Evoucher Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>