GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Last_Failure_Notification_Sent__c.field-meta.xml
<CustomField>
    <fullName>Last_Failure_Notification_Sent__c</fullName>
    <label>Last Failure Notification Sent</label>
    <type>DateTime</type>
</CustomField>