GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only used for rules concerning Partner eVouchers</inlineHelpText>
    <label>Partner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Business Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Promotional eVoucher rules</relationshipLabel>
    <relationshipName>Promotional_eVoucher_rules</relationshipName>
    <type>Lookup</type>
</CustomField>