GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Recorded_Money_Amount__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Money_Amount__c</fullName>
    <description>Total money amount associated to the rule at the time of the Approval.</description>
    <label>Historical Money Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>