GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Recorded_Number_of_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Recorded_Number_of_Vouchers__c</fullName>
    <description>Total number of vouchers associated to the rule at the time of the Approval</description>
    <label>Historical Number of Vouchers</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>