GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Total_Money_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Money_Amount__c</fullName>
    <formula>Total_Number_of_Vouchers__c  *  Evoucher_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Money Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>