GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/fields/Total_Number_of_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Vouchers__c</fullName>
    <label>Total Number of Vouchers</label>
    <summaryForeignKey>eVoucher__c.Promotional_eVoucher_rule__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>