GearsetPOC/force-app/main/default/objects/Promotional_eVoucher_rule__c/listViews/Promotional_Rules_Promo.listView-meta.xml
<ListView>
    <fullName>Promotional_Rules_Promo</fullName>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <columns>Evoucher_Value__c</columns>
    <columns>Currency__c</columns>
    <columns>Expiry_Date__c</columns>
    <columns>Total_Money_Amount__c</columns>
    <columns>Total_Number_of_Vouchers__c</columns>
    <columns>Expired__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
        <value>ServiceRecoveryRule</value>
    </filters>
    <filters>
        <field>Partner__c</field>
        <operation>equals</operation>
    </filters>
    <label>Promotional Rules (Promo)</label>
    <language>en_US</language>
</ListView>